# ComputerGraphicsClass

./: README.md
Examples/DrawSquare/: CMakeLists.txt  main.cpp
Examples/DrawTeapot/: CMakeLists.txt  main.cpp
Examples/DrawTriangle/: CMakeLists.txt  main.cpp
Examples/GlutMenu/: CMakeLists.txt  main.cpp
Examples/KeyInputs/: CMakeLists.txt  main.cpp
Examples/ProjectionTransformation/: CMakeLists.txt  main.cpp
Tutorials/classInfo/: glutNotes  notes.txt
projects/ECS/UML/: ecs.puml
projects/ECS/include/: Axes.h  DanceManager.h  DrawComponent.h
projects/ECS/src/: Axes.cpp  Camera.cpp  DanceManager.cpp  main.cpp
projects/ECS/src/core/: Types.h
projects/assignment1/: CMakeLists.txt  main.cpp
projects/assignment1/include/: Axes.h  Box.h  Callbacks.h  composite.h  util.h
projects/assignment1/src/: Axes.cpp  HumanoidRobot.cpp  Scene.cpp  codebackup.txt  main.cpp
projects/assignment2/: CMakeLists.txt  Instructions.txt
projects/assignment2/UML/: ecs.puml
projects/assignment2/include/: AudioController.h  Box.h  Camera.h  DrawComponent.h  HumanoidRobot.h  Plane.h  Scene.h  composite.h  util.h
projects/assignment2/src/: Audio.cpp  Box.cpp  Callbacks.cpp  Camera.cpp  HumanoidRobot.cpp  Plane.cpp  Util.cpp
projects/assignment2/src/core/: ComponentArray.h  EntityManager.cc  EntityManager.h
